# energy_optimization_project

./: .dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml
Dockerfile/: api.Dockerfile  dashboard.Dockerfile
dashboard/: app.py
data/simulated/: hourly_energy_data.csv
notebooks/: 01_data_exploration.ipynb  02_baseline_optimization.ipynb  03_model_experimentation.ipynb
scripts/: train_model.py
src/: api.py  config.py  data_generator.py  data_loader.py  features.py  forecasting.py  optimizer.py  schemas.py  utils.py
